project/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: project-frontend # This is the app as declared in the deployment.
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3000
