project/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
  name: kub-project-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-frontend-svc
            port:
              number: 3456
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: project-backend-svc
            port:
              number: 3456
